--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-jest": "^29.0.1",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.4",
     "jest": "^27.5.1",
+    "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0"
   }
 }
